# hosting-base

./: .env.example  .env.remote  .gitignore  .trigger-profile-service  ADMIN-CREDENTIALS.md  AGENTS.md  CHECK-PACKAGE-VISIBILITY.sh  DEPLOY_COMMANDS.sh  GET-PIPELINE-ERROR.md  HOW-TO-MAKE-PACKAGES-PUBLIC.md  MAKE-PACKAGES-PUBLIC-NOW.md  PACKAGES-PUBLIC-FIXED.md  PACKAGES-STILL-PRIVATE.md  SETUP-SSH-KEY.md  SSH-KEY-FIX-GUIDE.md  TEST-SSH-KEY.sh  VERIFY-PACKAGE-NAMES.md  analyze-code-structure.sh  check-base64-api.sh  check-compilation-errors.sh  check-pipeline-status.sh  check-recent-commits.sh  check-rust-syntax.sh  check-syntax.sh  cleanup-github-storage.sh  create-oauth2-client.sh  create-users.sh  reset-keycloak-sso.sh  verify-energy-remote.sh  verify-fix.sh  verify-imports.sh
.cursor/rules/: stock-simulator-live-campaign.mdc
.github/codeql/: codeql-config.yml
.github/scripts/: watch-after-push.sh  watch-deploy-comp-ai.sh
.github/workflows/: README.md  analyze-cpu-remote.yml  deploy-airflow-webserver-config.yml  deploy-comp-ai-service.yml  deploy-energy-service.yml  deploy-frontend.yml  deploy-profile-service.yml  e2e-stock-monitoring.yml  e2e-stock-service.yml  ensure-services-remote.yml  fix-keycloak-502.yml  fix-keycloak-login.yml  fix-keycloak-redirect.yml  force-update-production.yml  quick-fix-cpu-remote.yml  remote-disk-cleanup.yml  remote-sso-logs.yml  run-comp-ai-demo.yml  run-comp-ai-phase-b-test-remote.yml  stock-monitoring-ci-deploy.yml  stock-monitoring-frontend.yml  stock-service-ci-deploy.yml  stock-service-daily-signals-snapshot.yml  stock-service-paper-trade-loop.yml  stock-service-phase2-train.yml  stock-service-simulator-validation.yml  stock-service-universe-refresh.yml  sync-airflow-dags.yml  sync-nginx-login.yml  update-npm-lockfiles.yml  verify-keycloak-user.yml
lianel/dc/: .env.example  ACCESS-CONTROL-REVIEW.md  ACTUAL-TEST-RESULTS.md  ADMIN-ISSUE-DEBUG.md  ADMIN-SETUP.md  ALL-CHANGES-PUSHED.md  ANALYTICS-DEPLOYMENT-SUMMARY.md  API-EXAMPLES.md  AUTHENTICATION-GUIDE.md  AUTHENTICATION-KEYCLOAK-GUIDE.md  BACKEND-PROFILE-SERVICE.md  CHANGELOG-DEC23.md  COMPLETE-E2E-TEST-RESULTS.md  DAG-FAILURES-ANALYSIS.md  DAG-STATUS-CHECK.md  DASHBOARD-CLEANUP-SUMMARY.md  DASHBOARD-FIXES-SUMMARY.md  DASHBOARD-TUTORIALS.md  DASHBOARDS-SETUP-COMPLETE.md  DATA-INTERPRETATION-GUIDE.md  DATA-QUALITY-DASHBOARD-FIX.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT-NOTES.md  DEPLOYMENT-STATUS.md  DEPLOYMENT-TEST-RESULTS.md  DISASTER-RECOVERY-TESTING.md  E2E-FINAL-SUMMARY.md  E2E-TEST-COMPLETE-RESULTS.md  E2E-TEST-RESULTS-AND-FIXES.md  E2E-TEST-RESULTS-FINAL.md  ELECTRICITY-TIMESERIES-EMPTY-FIX.md  ELECTRICITY-TIMESERIES-FIX.md  ENTSOE-DAG-STATUS.md  FAILOVER-TESTING-GUIDE.md  FAQ.md  FINAL-E2E-TEST-REPORT.md  FINAL-E2E-TEST-RESULTS.md  FINAL-FIXES-STATUS.md  FINAL-VERIFIED-TEST-RESULTS.md  FRONTEND-CLIENT-FIX.md  (+79 more)
lianel/dc/comp-ai-service/: .dockerignore  Cargo.toml  Dockerfile  README.md
lianel/dc/comp-ai-service/src/: config.rs  frameworks.rs  inference.rs  main.rs  rate_limit.rs  response_cache.rs  utils.rs
lianel/dc/comp-ai-service/src/auth/: keycloak.rs  mod.rs
lianel/dc/comp-ai-service/src/db/: mod.rs  queries.rs
lianel/dc/comp-ai-service/src/handlers/: comp_ai.rs  controls.rs  health.rs  mod.rs
lianel/dc/comp-ai-service/src/integrations/: aws.rs  drive.rs  github.rs  m365.rs  mod.rs  okta.rs  sharepoint.rs
lianel/dc/comp-ai-service/src/models/: comp_ai.rs  controls.rs  mod.rs
lianel/dc/config/: webserver_config.py
lianel/dc/dags/: COORDINATOR-EXPLANATION.md  README-DAG-STRUCTURE.md  airflow_service_health_check_dag.py  comp_ai_alerts_dag.py  comp_ai_control_tests_dag.py  comp_ai_scan_documents_dag.py  data_quality_check_dag.py  entsoe_ingestion_dag.py  eurostat_harmonization_dag.py  eurostat_ingestion_coordinator.py  eurostat_ingestion_dag.py  eurostat_ingestion_nrg_bal_s.py  eurostat_ingestion_nrg_cb_e.py  eurostat_ingestion_nrg_ind_eff.py  eurostat_ingestion_nrg_ind_ren.py  eurostat_ingestion_table_template.py  eurostat_ingestion_test_dag.py  hello_world_dag.py  ml_dataset_clustering_dag.py  ml_dataset_forecasting_dag.py  ml_dataset_geo_enrichment_dag.py  nuts_boundary_update_dag.py  osm_feature_extraction_dag.py  osm_feature_extraction_dag_v2.py  stock_monitoring_alerts_dag.py  stock_monitoring_ingest_dag.py  stock_monitoring_price_history_roll_dag.py  (+3 more)
lianel/dc/energy-service/: API-DOCUMENTATION.md  Cargo.toml  Dockerfile  README.md
lianel/dc/energy-service/src/: config.rs  main.rs
lianel/dc/energy-service/src/auth/: keycloak.rs
lianel/dc/energy-service/src/db/: mod.rs  queries.rs  queries_entsoe_osm.rs
lianel/dc/energy-service/src/handlers/: energy.rs  entsoe_osm.rs  health.rs  metadata.rs  ml_datasets.rs  mod.rs
lianel/dc/energy-service/src/models/: energy.rs  entsoe_osm.rs  metadata.rs  ml_dataset.rs  mod.rs  quality.rs  region.rs
lianel/dc/stock-monitoring/backend/: Cargo.toml  Dockerfile  README.md
lianel/dc/stock-monitoring/backend/src/: app.rs  auth.rs  config.rs  lib.rs  main.rs
lianel/dc/stock-monitoring/backend/src/db/: mod.rs
lianel/dc/stock-monitoring/backend/tests/: integration_api.rs  integration_config_db.rs
lianel/dc/stock-service/backend/: Cargo.toml  Dockerfile  README.md
lianel/dc/stock-service/backend/src/: app.rs  auth.rs  config.rs  daily_strategy.rs  hybrid_selector.rs  ibkr.rs  lib.rs  main.rs  paper_trade.rs  today_cache.rs  watchlist.rs
lianel/dc/stock-service/backend/src/simulator/: mod.rs
lianel/dc/stock-service/backend/src/simulator/exchanges/: mod.rs  xetr.rs  xlon.rs  xnas.rs  xnys.rs
lianel/dc/stock-service/backend/tests/: integration_api.rs
lianel/docs/: 00-index.md  02-TECHNICAL-SPECIFICATIONS.md  05-MONITORING-SETUP.md  06-SECURITY-CONFIGURATION.md  CONVENTIONS-DATE-FORMAT.md  P0-01-SYSTEM-OVERVIEW.md  P0-03-ARCHITECTURE.md  P0-04-DEPLOYMENT-GUIDE.md  P0-06-SECURITY-CONFIGURATION.md  P0-07-REMOTE-HOST-ANALYSIS.md  P0-08-PROFILE-SERVICE.md  PROJECT-GOALS-AND-PLAN.md  README.md
lianel/services/profile-service/: Cargo.toml
lianel/services/profile-service/src/: main.rs
(+593 files in other folders)
