[package]
name = "lianel-comp-ai-service"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "bigdecimal"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
utoipa = { version = "4.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bigdecimal = { version = "0.4", features = ["serde"] }
base64 = "0.22"
moka = { version = "0.12", features = ["sync"] }
sha2 = "0.10"
axum-extra = { version = "0.9", features = ["multipart"] }
pdf-extract = "0.7"
uuid = { version = "1.6", features = ["v4"] }
# G4: AWS IAM integration (evidence)
aws-config = "1.4"
aws-sdk-iam = "1.4"
