[package]
name = "lianel-stock-monitoring-service"
version = "0.1.0"
edition = "2021"
description = "Stock exchange monitoring and analysis API (EU markets MVP)"

[features]
default = []
# Enable Redis for intraday price cache (CI builds without it; Docker/production use --features redis).
redis = ["dep:redis"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"], default-features = false }
reqwest = { version = "0.11", features = ["json"] }
alcoholic_jwt = "1.0"
chrono = { version = "0.4", default-features = false, features = ["alloc", "clock"] }
redis = { version = "0.24", optional = true, default-features = false, features = ["aio", "tokio-comp"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
