[package]
name = "lianel-stock-service"
version = "0.2.0"
edition = "2021"
description = "Stock service – SSO verification and IBKR integration (minimal API)"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
alcoholic_jwt = "1.0"
# IBKR OAuth 1.0a first-party Live Session Token
base64 = "0.22"
hmac = "0.12"
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
rsa = { version = "0.9", features = ["sha2"] }
sha1 = "0.10"
sha2 = "0.10"
percent-encoding = "2.3"
hex = "0.4"
openssl = "0.10"
urlencoding = "2.0"
# Optional: cache today's intraday points so restarts don't lose them (set REDIS_URL to enable)
redis = { version = "0.27", features = ["connection-manager", "tokio-comp"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
